examples/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: identity-provider
  labels:
    app.kubernetes.io/name: identity-provider-server
