examples/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-provider-server
  namespace: identity-provider
  labels:
    app.kubernetes.io/name: identity-provider-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: identity-provider-server
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
